--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,7 +23,7 @@ oauthlib==3.2.2
 Pillow==9.4.0
 pycparser==2.21
 gunicorn==20.0.4
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.*
 PyJWT==2.6.0
 python3-openid==3.2.0
 pytz==2022.7.1
