--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,11 +1,13 @@
 version: '3.3'
 services:
+
   db:
     image: postgres:13.0-alpine
     volumes:
       - data_value:/var/lib/postgresql/data/
     env_file:
-      - .env
+      - ./.env
+
   backend:
     build:
       context: ../backend
@@ -18,13 +20,17 @@ services:
     depends_on:
       - db
     env_file:
-      - .env
+      - ./.env
+
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -32,9 +38,12 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
       - static_value:/var/html/backend_static/
       - media_value:/var/html/media/
+    depends_on:
+      - frontend
 
 volumes:
   static_value:
