--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-api-logger==1.1.12
+drf-extra-fields
 idna==3.4
 isort==5.12.0
 itypes==1.2.0
