--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -13,17 +13,9 @@ server {
         root /var/html/;
     }
 
-    location /backend_static/admin/ {
-        root /var/html/;
-    }
-
-    location /backend_static/rest_framework/ {
-        root /var/html/;
-    }
-
     location /admin/ {
         proxy_set_header        Host $host;
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/admin/;
     }
 
     location /api/ {
