--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -35,14 +35,23 @@ services:
     image: nginx:1.19.3
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+#      - ./certbot/conf:/etc/letsencrypt
+#      - ./certbot/www:/var/www/certbot
       - static_value:/var/html/backend_static/
       - media_value:/var/html/media/
     depends_on:
       - frontend
+
+#  certbot:
+#    image: certbot/certbot
+#    volumes:
+#      - ./certbot/conf:/etc/letsencrypt
+#      - ./certbot/www:/var/www/certbot
 
 volumes:
   static_value:
