--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -30,10 +30,16 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+#     location /.well-known/acme-challenge/ {
+#         root /var/www/certbot;
+#     }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
+#         return 301 https://$host$request_uri;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -45,3 +51,16 @@ server {
       }
 
 }
+# server {
+#     listen 443 ssl;
+#     server_name localhost;
+#
+#     location / {
+#     proxy_pass http://localhost;
+#     }
+#     ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+#
+#     include /etc/letsencrypt/options-ssl-nginx.conf;
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+# }
