--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,10 +9,7 @@ services:
       - ./.env
 
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
-#    image: nikiafree/foodgram:latest
+    image: nikiafree/foodgram_backend:latest
     restart: always
     volumes:
       - static_value:/app/backend_static/
@@ -35,7 +32,7 @@ services:
     image: nginx:1.19.3
     ports:
       - "80:80"
-      - "443:443"
+#      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
