--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,5 @@
 FROM python:3.11-slim
 WORKDIR /app
-COPY ../requirements.txt .
+COPY backend/ .
 RUN pip3 install -r requirements.txt --no-cache-dir
-COPY . .
 CMD ["gunicorn", "--capture-output", "foodgram.wsgi:application", "--bind", "0:8000" ]
