--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,7 +3,7 @@ server {
 
     server_tokens off;
 
-    server_name localhost;
+    server_name 51.250.102.140;
 
     location /media/ {
         root /var/html/;
