--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     build:
       context: ../frontend
       dockerfile: Dockerfile
-#    image: nikiafree/foodgram_frontend:lates
+#    image: nikiafree/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
