--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - data_value:/var/lib/postgresql/data/
     env_file:
-      - ./.env
+      - .env
 
   backend:
 #    build:
@@ -20,7 +20,7 @@ services:
     depends_on:
       - db
     env_file:
-      - ./.env
+      - .env
 
   frontend:
     build:
