--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ django==3.2
 djangorestframework==3.12.4
 django-filter==2.4.0
 gunicorn==20.0.4
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.*
 djoser==2.1.0
 drf-extra-fields==3.1.1
 pillow==8.3.2
