--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,7 +14,12 @@
 # python-dotenv==0.19.0
 
 
-asgiref==3.6.0
+
+Django==3.2
+django-filter==2.4.0
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
+gunicorn==20.0.4
 bleach==6.0.0
 certifi==2022.12.7
 cffi==1.15.1
@@ -23,28 +28,18 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==39.0.1
 defusedxml==0.7.1
-Django==3.2.18
-django-filter==22.1
 django-templated-mail==1.1.1
-djangorestframework==3.12.4
-djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-api-logger==1.1.12
-flake8==5.0.4
-gunicorn==20.0.4
+drf-extra-fields
 idna==3.4
-importlib-metadata==1.7.0
-isort==5.11.5
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-mccabe==0.7.0
 oauthlib==3.2.2
 Pillow==9.4.0
-psycopg2-binary==2.9.*
-pycodestyle==2.9.1
 pycparser==2.21
-pyflakes==2.5.0
+psycopg2-binary==2.9.*
 PyJWT==2.6.0
 python3-openid==3.2.0
 pytz==2022.7.1
@@ -54,49 +49,7 @@ six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.3
-typing_extensions==4.4.0
+tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.26.14
 webencodings==0.5.1
-zipp==3.13.0
-
-
-
-# Django==3.2
-# django-filter==2.4.0
-# djangorestframework==3.12.4
-# djangorestframework-simplejwt==4.8.0
-# gunicorn==20.0.4
-# bleach==6.0.0
-# certifi==2022.12.7
-# cffi==1.15.1
-# charset-normalizer==3.0.1
-# coreapi==2.3.3
-# coreschema==0.0.4
-# cryptography==39.0.1
-# defusedxml==0.7.1
-# django-templated-mail==1.1.1
-# djoser==2.1.0
-# drf-api-logger==1.1.12
-# drf-extra-fields
-# idna==3.4
-# itypes==1.2.0
-# Jinja2==3.1.2
-# MarkupSafe==2.1.2
-# oauthlib==3.2.2
-# Pillow==9.4.0
-# pycparser==2.21
-# psycopg2-binary==2.9.*
-# PyJWT==2.6.0
-# python3-openid==3.2.0
-# pytz==2022.7.1
-# requests==2.28.2
-# requests-oauthlib==1.3.1
-# six==1.16.0
-# social-auth-app-django==4.0.0
-# social-auth-core==4.3.0
-# sqlparse==0.4.3
-# tzdata==2022.7
-# uritemplate==4.1.1
-# urllib3==1.26.14
-# webencodings==0.5.1
